infra/k8s/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-depl
spec:
  # for the deployment to know which pods to manage
  selector:
    matchLabels:
      app: api
  # to label the pods that the deployment manages
  template:
    metadata:
      labels:
        app: api
    # spec for the actual containers in the pods
    spec:
      containers:
        - name: api
          image: rocky1638/activelytakehomechallenge-api
---
# ClusterIP services provides access for other nodes.
apiVersion: v1
kind: Service
metadata:
  name: api-srv
spec:
  type: ClusterIP # this is default
  # find these pods in the cluster!
  # (designated in the posts deployment)
  # kind of similar to css
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 8000 # the port of the service, not the pod!
      targetPort: 8000 # port that is on the pod/application!
