infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    # a single k8s cluster can host
    # multiple websites at different domains

    # for now, we access this host (but it's actually localhost:80)
    # we did this override in /etc/hosts
    - host: automl.dev
      # routing rules
      http:
        # these paths are matched from the top,
        # just like react router
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-srv
                port:
                  number: 8000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
